<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output_text"
        android:textSize="@dimen/default_output_text_size"
        android:textAlignment="textEnd"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/clear_all"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/clear_all_button_label"/>
        <Button
            android:id="@+id/clear"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/clear_button_label"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/seven"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/seven_button_label"/>
        <Button
            android:id="@+id/eight"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/eight_button_label"/>
        <Button
            android:id="@+id/nine"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/nine_button_label"/>
        <Button
            android:id="@+id/plus"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/plus_button_label"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/four"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/four_button_label"/>
        <Button
            android:id="@+id/five"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/five_button_label"/>
        <Button
            android:id="@+id/six"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/six_button_label"/>
        <Button
            android:id="@+id/minus"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/minus_button_label"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/one"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/one_button_label"/>
        <Button
            android:id="@+id/two"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/two_button_label"/>
        <Button
            android:id="@+id/three"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/three_button_label"/>
        <Button
            android:id="@+id/divide"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/divide_button_label"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/zero"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/zero_button_label"/>
        <Button
            android:id="@+id/decimal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/decimal_button_label"/>
        <Button
            android:id="@+id/equal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/equal_button_label"/>
        <Button
            android:id="@+id/multiply"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_button_text_size"
            android:text="@string/multiply_button_label"/>
    </LinearLayout>

</LinearLayout>